force-app/main/default/objects/PaymentService__mdt/PaymentService__mdt.object-meta.xml
<CustomObject>
    <description>Payment services supported for Proesis</description>
    <label>PaymentService</label>
    <pluralLabel>PaymentServices</pluralLabel>
</CustomObject>