force-app/main/default/objects/PaymentService__mdt/fields/ImplementationApexClass__c.field-meta.xml
<CustomField>
    <fullName>ImplementationApexClass__c</fullName>
    <label>ImplementationApexClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>