force-app/main/default/objects/PaymentService__mdt/fields/PaymentServiceLabel__c.field-meta.xml
<CustomField>
    <fullName>PaymentServiceLabel__c</fullName>
    <label>PaymentServiceLabel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>